tests/error/inout_errors/moved_assign.py
from guppylang.decorator import guppy
from guppylang.std.quantum import qubit


@guppy
def test(q: qubit) -> qubit:
    r = q
    q = qubit()
    return r


test.compile()
