tests/error/inout_errors/moved_assign.err
Error: Not owned (at $FILE:7:8)
  | 
5 | @guppy
6 | def test(q: qubit) -> qubit:
7 |     r = q
  |         ^ Cannot move `q` since `test` doesn't own it
  | 
6 | def test(q: qubit) -> qubit:
  |          -------- Argument `q` is only borrowed. Consider taking ownership:
  |                   `q: qubit @owned`

Guppy compilation failed due to 1 previous error
